# beancount-ui

./: .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  state.py
components/: charts.py  date_input.py  layout.py  metric_card.py
core/: analytics.py  calculations.py  categorizer.py  document_handler.py  ledger.py  transaction_writer.py
pages/: add_transaction.py  charts.py  crypto.py  import_review.py  investments.py  overview.py  transactions.py
plugins/enable_banking/: auth.py  fetch.py  staging.py
